# paw-one

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
examples/: sandbox.rs
notebooks/: curvature.ipynb  plot-wave.ipynb  wave.csv
src/: display_dma.rs  heap.rs  i2s.rs  lib.rs  main.rs  old_main.rs
src/control/: btn.rs  enc.rs  keys.rs  mod.rs  qei_enc.rs
src/drivers/: mod.rs  ttp229.rs
src/iter/: digits.rs
src/midi/: mod.rs  note.rs
src/sound/adsr/: mod.rs  ui.rs
src/synth/: event.rs  mod.rs  wavetable.rs
src/ui/: builder.rs  event.rs  focus.rs  fps.rs  logo.rs  mod.rs  page.rs  widget.rs
src/ui/kit/: button.rs  input.rs  label.rs  menu.rs  mod.rs  select.rs
src/ui/mono_icons/: icons_5x7.rs  mod.rs
src/ui/pages/: mod.rs  osc.rs  preset.rs
