[package]
name = "paw-one"
version = "0.1.0"
edition = "2021"

[dependencies]
paw = { path = "../paw" }

# embassy-stm32 = { path = "../embassy/embassy-stm32", features = [
#     "defmt",
#     "stm32f412re",
#     "unstable-pac",
#     "memory-x",
#     "time-driver-any",
#     "exti",
#     "time",
#     "chrono",
# ] }
# embassy-sync = { path = "../embassy/embassy-sync", features = ["defmt"] }
# embassy-executor = { path = "../embassy/embassy-executor", features = [
#     "task-arena-size-32768",
#     "arch-cortex-m",
#     "executor-thread",
#     "executor-interrupt",
#     "defmt",
#     "integrated-timers",
# ] }
# embassy-time = { path = "../embassy/embassy-time", features = [
#     "defmt",
#     "defmt-timestamp-uptime",
#     "tick-hz-32_768",
# ] }
# embassy-usb = { path = "../embassy/embassy-usb", features = ["defmt"] }
# embassy-futures = { path = "../embassy/embassy-futures" }
# embassy-hal-internal = { path = "../embassy/embassy-hal-internal" }
# embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal", features = [
#     "defmt",
# ] }

# embassy-stm32 = { version = "0.1", features = [
#     "defmt",
#     "stm32f412re",
#     "unstable-pac",
#     "memory-x",
#     "time-driver-any",
#     "exti",
#     "chrono",
# ] }
# embassy-sync = { version = "0.6", features = ["defmt"] }
# embassy-executor = { version = "0.5", features = [
#     "task-arena-size-32768",
#     "arch-cortex-m",
#     "executor-thread",
#     "executor-interrupt",
#     "defmt",
#     # "integrated-timers",
# ] }
# embassy-time = { version = "0.3", features = [
#     "defmt",
#     "defmt-timestamp-uptime",
#     "tick-hz-32_768",
# ] }
# embassy-usb = { version = "0.2", features = ["defmt"] }
# embassy-futures = { version = "0.1" }
# embassy-hal-internal = { version = "0.1" }
# embassy-embedded-hal = { version = "0.1", features = ["defmt"] }

# usbd-hid = "0.7.0"

embedded-ui = { path = "../embedded-ui", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = { version = "0.4", features = [] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"

embedded-alloc = { version = "0.5.1", features = [] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async", "defmt-03"] }
micromath = "2.1.0"
display-interface = { version = "0.4.1" }

# display-interface-spi = { version = "0.4.1" }
cortex-m-semihosting = "0.5.0"
byte-slice-cast = { version = "1.2.2", default-features = false }
mipidsi = { version = "0.7" }
embedded-text = "0.7.0"
embedded-sdmmc = { version = "0.7.0", default-features = false, features = [
    "defmt-log",
] }
embedded-graphics-framebuf = "0.5.0"


w25q = { version = "0.2.9", default-features = false }
display-interface-i2c = "0.5.0"
ssd1306 = { version = "0.8.4" }
num = { version = "0.4.2", default-features = false }
rotary-encoder-embedded = { version = "0.2.0", features = ["angular-velocity"] }
stm32_i2s_v12x = "0.5.1"
nb = { version = "1.1.0", features = ["defmt-0-3"] }
panic-halt = "0.2.0"
debouncr = "0.2.2"
usbd-midi = "0.3.0"
usb-device = "0.3.2"

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f412", "i2s", "defmt", "usb_fs"]

[profile.dev]
opt-level = 3
debug = 'full'
# lto = true


[profile.release]
debug = 'full'
opt-level = 'z' # turn on maximum optimizations.
# lto = true      # Link-time-optimizations for further size reduction
